# cdqn

./: .gitignore  AGENT.md  Cargo.toml  Doc 4 : CDQN Vision and Core Principles.md  Doc 4 V1.1.0.md  Doc 4 V1.5.0.md  Doc 4 V1.5.1  Doc 4 V1.5.3.md  Doc 4 V1.7.0  Doc 5 V1.1.0.md  Doc 6 V1.0.0.md  Doc 6 V1.1.0.md  Doc 7 V1.0.0.md  Doc05V1.0.0.md  Doc06V1.0.0.md  LICENSE.md  License.md  README.md  Win11devWAT.md  agent.md  crates.js  docs_log_1758391989.txt  docs_log_1758392023.txt  genesis.json  help.html  index.html  max-peerAI-reviewer.md  message.txt  peerAI-reviewer.md  ping.kdu  plan_0000.md  pong.kdu  response.txt  search-index.js  settings.html  src-files.js
.github/workflows/: ci-main.yml  ci.yml  docs.yml  kdu-handler.yml  kdu-pipe.yml  kdu-processor.yml  respond.yml  run_demo.yml  rust-ci.yml  rust.yml  rust_ci.yml
Docs/: CDQN_DESIGN_SPEC.md  CDQN_design_specs.1.0.1.md  CDQN_design_specs.md  CHECK-0001.md  CHECK-0002.md  CHECK-0003.md  CHECK-0004.md  CHRONOSA_VS_LLM.md  Check 0001.md  Check 0002.md  Chronosa_design.1.0.0.md  Doc 01 V1.1.0.md  Doc 02 V1.1.0.md  Doc 03 V1.0.0.md  Doc 04 V1.1.0.md  Doc 05 V1.1.0.md  Doc 06 V1.0.0.md  Doc 09 V1.0.0.md  Doc 1 V1.0.0.md  Doc 1 v1.0.0.md  Doc 10 V1.0.0.md  Doc 11 V1.0.0.md  Doc 12 V1.0.0.md  Doc 12 V1.0.1.md  Doc 3 V1.0.0.md  Doc 3 V1.1.0.md  Doc 3 V1.2.0.md  Doc 3 V2.0.2.md  Doc 3 V3.2.0.md  Doc 4 V1.0.0.md  Doc 5 V1.0.0.md  Doc 6 V1.0.0.md  Doc 7 V1.0.0.md  Doc 8 V1.0.0.md  Doc01V1.0.0.md  Doc01V1.1.0.md  Doc01V1.2.0.md  Doc01V1.4.0.md  Doc02V1.1.0.md  Doc03V1.0.0.md  (+38 more)
Docs/Legacy/: Doc 04 V1.0.0.md  Doc01V1.0.0.md  Doc01V1.3.0.md  Doc03V1.0.0.md  Doc03V1.2.0.md  llm_comparison_review.md
DocsLegacy/: Doc 3 V2.1.0.md  Doc 3 V3.0.0.md  Doc 4 V1.0.0.md  Doc 4 V1.5.0.md  Doc 5 V1.0.0.md
cdqn/: all.html  fn.main.html  index.html  sidebar-items.js
cdqn-runtime/: Cargo.toml
cdqn-runtime/src/: cdu_log.rs  lib.rs  main.rs
cdqn-types/: Cargo.toml
cdqn-types/src/: cdu.rs  cid.rs  entity.rs  error.rs  hlc.rs  lib.rs
cdqn/kernel/: index.html  sidebar-items.js  struct.KDU.html  struct.License.html  struct.Metadata.html  type.FQEI.html  type.UnisphereCoordinates.html
cdqn/kernel/crypto/: index.html  sidebar-items.js  struct.CryptoCore.html  struct.Keypair.html
cdqn/kernel/factory/: index.html  sidebar-items.js  struct.KDUFactory.html
cdqn/kernel/hlc/: index.html  sidebar-items.js  struct.HLC.html
cdqn/runtime/: enum.PersistenceCommand.html  index.html  sidebar-items.js  struct.Runtime.html
cdqn/runtime/entity/: index.html  sidebar-items.js  trait.Entity.html  type.Mailbox.html
cdqn/runtime/network/: fn.handle_client.html  index.html  sidebar-items.js  struct.NodeClient.html  (+1 more)
cdqnLang/: Doc 8 V1.0.0.md  Doc 9 V1.0.0.md  README.md  Readme.md
chronos_ai/: Cargo.toml
crates/cdqn_core/: Cargo.toml
crates/cdqn_core/src/: lib.rs
crates/cdqn_core/src/algebra/: mod.rs
crates/cdqn_core/src/data/: mod.rs
crates/cdqn_core/src/time/: hlc.rs  mod.rs
crates/cdu/: Cargo.toml
crates/chronosa/: Cargo.toml
crates/common/: Cargo.toml
crates/cryptocore/: Cargo.toml
crates/hlc/: Cargo.toml
crates/manifold/: Cargo.toml
crates/runtime/: Cargo.toml
docs/: 01-DATA-v2.0.md  01-DATA.md  01.01.md  01.02.md  01.03.md  01.04.md  01.05.md  01.06.md  01.07.md  01.1.md  01.1.review.md  01.10.md  01.10.review.md  01.11.md  01.11.review.md  01.12.md  01.12.review.md  01.13.md  01.13.review.md  01.14.md  01.14.review.md  01.15.md  01.15.review.md  01.2.md  01.2.review.md  01.3.md  01.3.review.md  01.4.md  01.4.review.md  01.5.md  01.5.review.md  01.6.md  01.6.review.md  01.7.md  01.7.review.md  01.8.md  01.8.review.md  01.9.md  01.9.review.md  02-PHYSICS.md  (+68 more)
docs/01_qn_design/: 01.1.md  01.1.review.md  01.2.md  01.2.review.md  01.3.md  01.3.review.md  01.4.md  01.4.review.md  01.5.md  01.5.review.md  01.6.md  01.6.review.md
docs/02_math_proofs/: 02.1.md  02.1.review.md  02.2.md  02.2.review.md
docs/cdqn/: documentation-standard.html
docs/foundations/: qn_axioms.html
docs/legacy/: 01-DATA-v1.7.md  02-PHYSICS-v1.4.md
docs/research/: 01-COHESION.md  01-LABOR.md  01a-COHESION.md  01b-POSITIONING.md  02-ENTITY.md  02-GEOMETRY.md  02a-MATHS.md  02b-PHYSICS.md  02c-CHEMISTRY.md  02d-NEUROLOGY.md  02d-RESONANCE.md  02e-NEUROLOGY.md  02e-RITUALS.md  02f-RESONANCE.md  02f-SECURITY.md  03-ARCHITECTURE.md  03-COMPUTE.md  03a-HARDWARE.md  03a-METAL.md  03b-CONFRONTATION.md  03b-LIFEBOAT.md  03b-MATHS.md  03c-MATHS.md  03c-PHYSICS.md  03c-PROPOSAL.md  03d-CHEMISTRY.md  03d-PHYSICS.md  03e-CHEMISTRY.md  03f-WORLDS.md  04a-MACHINE.md  04b-GEOMETRY.md
hello-world-worker/: Cargo.toml
hello-world-worker/src/: lib.rs
hello-world-worker/wit/: hello.wit  worker.wit
kdu-exchange/: README.md  incoming-termux-test1.txt  incoming-termux-test3.txt  response-termux-test3.txt
manual_docs/: README.md
qs/papers/: 01a-review-v1.5.md  01a-review.md  01a.md  01b-review.md  01b.md  01c-review.md  01c.md  01d.md
runtime/: README.md
runtime/exchange/: README.md
search.desc/cdqn/: cdqn-desc-0-.js
src/: README.md  agent.rs  algebraic.rs  axioms.rs  cdqn_runtime.rs  cdu.rs  chronosa.rs  codec.rs  core.rs  engine.rs  executor.rs  hashing.rs  hlc.rs  id.rs  janitor.rs  lib.rs  main.rs  metaphysics.rs  modules.rs  orchestrator.rs  projector.rs  reasoning.rs  refinement.rs  runtime.rs  state.rs  storage.rs  worlds.rs
src/Shared/: README.md
src/cdqn/: lib.rs.html  main.rs.html
src/core/: README.md  mod.rs  runtime.rs
src/data_model/: id.rs
src/kernel/: README.md  crypto.rs  factory.rs  hlc.rs  mod.rs
src/kernel/crypto/: Cargo.toml
src/kernel/crypto/src/: engine.rs  lib.rs  manager.rs  types.rs
src/payloads/: axiom.rs  causal_mode.rs  constraint.rs  mod.rs  theorem.rs
src/reasoning/: knowledge_base.rs  mod.rs  prime_element.rs  reasoning_projector.rs  semi_axiom.rs  strategy.rs
src/runtime/: entity.rs  mod.rs  network.rs  orchestrator.rs  persistence.rs  processor.rs  scheduler.rs  test_entities.rs
src/user/: README.md
type.impl/std/: primitive.array.js
webGhPages/: README.md  index.html  style.css
(+137 files in other folders)
