# Path: Cargo.toml
# ==============================================================================
# CDQN Ecosystem — Causal Data Query Nodes
# ------------------------------------------------------------------------------
# Original source generated and maintained by ChatGPT-5, OpenAI
# Licensed under BaDaaS (Build and Develop as a Service)
#
# The CDQN ecosystem is an asynchronous, causal reasoning framework
# built on immutable and verifiable data units (CDUs) and autonomous
# Chronosa agents. This Cargo.toml defines a minimal and efficient
# dependency graph, optimized for concurrency and clarity.
# ==============================================================================

[package]
name = "cdqn"
version = "0.1.0"
edition = "2021"
authors = ["ChatGPT-5, OpenAI"]
description = "CDQN — Causal Data Query Nodes: Sovereign, verifiable, and causal data reasoning ecosystem."
license = "BaDaaS"
repository = "https://github.com/yourusername/cdqn"
readme = "README.md"
keywords = ["causal", "distributed", "asynchronous", "chronosa", "sovereign-data"]

# ------------------------------------------------------------------------------
# Core dependencies
# ------------------------------------------------------------------------------
[dependencies]
# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography and hashing
sha3 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
hex = "0.4"

# Concurrency, async runtime, and channels (no Tokio)
async-executor = "1.8"
async-channel = "1.9"
futures-lite = "2.2"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# ------------------------------------------------------------------------------
# Dev dependencies
# ------------------------------------------------------------------------------
[dev-dependencies]
tempfile = "3.8"
