[package]
name = "cdqn-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Duy Quang Nguyen"]
description = "The sovereign host runtime for the cdqn ecosystem."
license-file = "../LICENSE.md"
repository = "https://github.com/cdqn5249/cdqn"

[dependencies]
cdqn-types = { path = "../cdqn-types" }
tokio = { version = "1", features = ["full"] }
wasmtime = "20.0.0"
wasmtime-wasi = "20.0.0"

# --- THIS IS THE FIX ---
# We add the missing dependency that cdu_log.rs needs.
serde_json = "1.0"

anyhow = "1.0"
thiserror = "1.0"
