[package]
name = "cdqn-types"
version = "0.1.0"
edition = "2025"
authors = ["Christophe Duy Quang Nguyen"]
description = "Core data types for the cdqn ecosystem (CDU, Entity, HLC, CID)."
license = "BaDaaS v1.1.0"
repository = "https://github.com/cdqn5249/cdqn"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1.0"
