[package]
name = "cdqn-types"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Duy Quang Nguyen"]
description = "Core data types for the cdqn ecosystem (CDU, Entity, HLC, CID)."
license-file = "../LICENSE.md"
repository = "https://github.com/cdqn5249/cdqn"

[dependencies]
# These are the libraries our source code will use.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1.0"
