[package]
name = "hello-world-worker"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Duy Quang Nguyen"]
description = "A simple example of a cdqn worker component."
license-file = "../LICENSE.md"
repository = "https://github.com/cdqn5249/cdqn"

[lib]
crate-type = ["cdylib"]

[dependencies]
cdqn-types = { path = "../cdqn-types" }
cargo-component-bindings = "0.7.0"

# --- THIS IS THE CORRECTED SECTION ---
[package.metadata.component]
# We specify the target world directly. `cargo-component` will automatically
# find the `hello.wit` file inside the `wit` directory.
target = { world = "hello" }
