[package]
name = "hello-world-worker"
version = "0.1.0"
edition = "2021"
authors = ["Christophe Duy Quang Nguyen"]
description = "A simple example of a cdqn worker component."
license-file = "../LICENSE.md"
repository = "https://github.com/cdqn5249/cdqn"

[lib]
crate-type = ["cdylib"]

[dependencies]
# --- THIS IS THE DEFINITIVE FIX, BASED ON OFFICIAL DOCUMENTATION ---
# The `macros` feature provides the `generate!` macro and all necessary bindings.
wit-bindgen = { version = "0.24.0", features = ["macros"] }

[package.metadata.component]
target = { world = "hello" }
