# BaDaaS License: This file is governed by the BaDaaS license.
# File Path: /src/kernel/crypto/Cargo.toml

[package]
name = "k_crypto_core"
version = "0.1.0"
edition = "2021"
description = "The sovereign root of trust for the CDQN ecosystem."
license = "BaDaaS-1.0.0" // Placeholder for your custom license ID

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "digest"] }
rand_core = { version = "0.6", features = ["std"] }
