# BaDaaS License: This file is governed by the BaDaaS license.
# File Path: /src/kernel/crypto/Cargo.toml

# This file defines the K.CryptoCore module as a Rust crate, specifies its
# metadata, and declares its minimal, audited dependencies as required by
# the CDQN Manifesto (Tenet 8).

[package]
name = "k_crypto_core"
version = "0.1.0"
edition = "2021"
description = "The sovereign root of trust for the CDQN ecosystem."
license = "BaDaaS-1.0.0" # Placeholder for your custom license ID

[dependencies]
# We use Sha512, as required by the Ed25519ph standard.
sha2 = "0.10"

# We enable the "digest" feature, which correctly exposes the pre-hashing
# signature functions that work with a SHA-512 digest object.
ed25519-dalek = { version = "2.1", features = ["rand_core", "digest"] }

rand_core = { version = "0.6", features = ["std"] }
